image overflow issue solved

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ span{
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 .title-img{
   position: absolute;
